[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc_skin_utils"
version = "0.1.3"
authors = [
  { name="EntropyDrop" },
]
description = "Minecraft Skin Utilities"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "Pillow",
    "pyvista"
]

[project.scripts]
mc_skin_utils = "mc_skin_utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mc_skin_utils*"]

[tool.setuptools.package-data]
mc_skin_utils = ["*.png"]
